# epiphany-extensions-jonny

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
extensions/: Makefile.am
extensions/confirmwindowclose/: Makefile.am  confirmwindowclose.c  confirmwindowclose.ephy-extension.in  ephy-confirmwindowclose-extension.c  ephy-confirmwindowclose-extension.h
extensions/middleclickclose/: Makefile.am  ephy-middleclickclose-extension.c  ephy-middleclickclose-extension.h  middleclickclose.c  middleclickclose.ephy-extension.in
extensions/onlyoneclosebutton/: Makefile.am  ephy-onlyoneclosebutton-extension.c  ephy-onlyoneclosebutton-extension.h  onlyoneclosebutton.c  onlyoneclosebutton.ephy-extension.in
extensions/onlyoneclosebutton/egg/: Makefile.am  eggmarshalers.c  eggtypebuiltins.c  eggtypebuiltins.h
extensions/sample/: Makefile.am  ephy-sample-extension.c  sample.c  sample.ephy-extension.in
extensions/shortcutresolve/: Makefile.am  ephy-shortcutresolve-extension.c  ephy-shortcutresolve-extension.h  example-config  shortcutresolve.c  shortcutresolve.ephy-extension.in
extensions/tabkeynavigate/: Makefile.am  ephy-tabkeynavigate-extension.c  ephy-tabkeynavigate-extension.h  tabkeynavigate.c  tabkeynavigate.ephy-extension.in
